# Grok-CLI

./: .gitignore  .grokignore  Cargo.toml  README.md
src/: api.rs  app.rs  autocomplete.rs  compression.rs  config.rs  main.rs  markdown.rs  megamind.rs  message_handling.rs  persistence.rs  planning.rs  settings.rs  tool_plugins.rs  tools.rs  transactions.rs  ui.rs
